--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : 
   employer         : 
   uri              : # URL
-  email            : "ntung [at] stanford [dot] edu" 
+  email            : 
 
   # Academic websites
   academia         : # URL
