--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   # - title: "Papers"
   #   url: /papers/
 
-  - title: "Problems"
-    url: /problems/
+  # - title: "Problems"
+  #   url: /problems/
 
   - title: "Talks"
     url: /talks/    
